# InfoRendGenerator

./: .gitignore  README.md  gerar_informe_rendimentos.py  pyproject.toml
data/: 2025-Balanco.xlsx  Extrato-01-01-2025-a-31-12-2026-OFX.ofx
scripts/: dev.ps1  run-ofx.ps1  run-values.ps1  run-xlsx.ps1
src/info_rend_generator/: __init__.py  cli.py
src/info_rend_generator/application/: generate_informe.py
src/info_rend_generator/assets/: __init__.py
src/info_rend_generator/config/: defaults.py
src/info_rend_generator/domain/: __init__.py  informe.py  money.py  transactions.py
src/info_rend_generator/infrastructure/: __init__.py  audit_excel_exporter.py  excel_reader.py  ofx_reader.py  pdf_reportlab_renderer.py  transaction_reader.py
tests/: test_generate_informe.py
